# omni-pii-shield-presidio-policy

./: .gitignore  README.md  idea.md
definition/: Makefile  exchange.json  gcl.yaml
home/: home.md
implementation/: .gitignore  .project.yaml  Cargo.toml  Makefile
implementation/deploy/: mcp-managed-policy-config.json
implementation/playground/: docker-compose.yaml
implementation/playground/config/: api.yaml  logging.yaml
implementation/src/: a2a.rs  config.rs  detect.rs  engine.rs  evidence.rs  extract.rs  lib.rs  mcp.rs  presidio.rs  sse.rs
implementation/tests/: it_pipeline.rs
