# Copyright 2026 Salesforce, Inc. All rights reserved.
[package]
name = "pii_shield_presidio_policy"
version = "0.1.0"
rust-version = "1.88.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.anypoint]
group_id = "TODO_GROUP_ID"
# The Anypoint Exchange CLI rejects asset ids whose hyphen-separated
# segments mix letters and digits, so keep every segment purely alphabetic.
definition_asset_id = "pii-shield-presidio-policy"
implementation_asset_id = "pii-shield-presidio-policy-impl"

[dependencies]
pdk = { version = "1.9.0", features = ["enable_stop_iteration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "preserve_order"] }
serde_json_path = "0.7"
anyhow = "1.0"
thiserror = "1"
sha2 = "0.10"

[dev-dependencies]
pdk-unit = { version = "1.9.0", features = ["experimental"] }

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
panic = "abort"
