# Copyright 2026 Salesforce, Inc. All rights reserved.
[package]
name = "pii_shield_presidio_policy"
version = "0.2.2"
rust-version = "1.88.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.anypoint]
group_id = "82a0453b-22e6-430d-bbf4-35b989d043dc"
# Split-model policy: `definition_asset_id` is the table form { name, version }
# that P4A's split-build validator requires. Keep `version` in sync with the
# `[package] version` above and definition/exchange.json.
definition_asset_id = { name = "pii-shield-presidio-policy", version = "0.2.2" }
implementation_asset_id = "pii-shield-presidio-policy-impl"

[dependencies]
pdk = { version = "1.9.0", features = ["enable_stop_iteration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "preserve_order"] }
serde_json_path = "0.7"
anyhow = "1.0"
thiserror = "1"
sha2 = "0.10"

[dev-dependencies]
pdk-unit = { version = "1.9.0", features = ["experimental"] }

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
panic = "abort"
